modify unit test code to be compatible with Java8